fix js collapsable behaviour

--- a/_src/assets/scss/components/_collapsable.scss
+++ b/_src/assets/scss/components/_collapsable.scss
@@ -31,3 +31,7 @@
   padding: 0 0 30px;
   opacity: 1;
 }
+
+.collapsable--rotate {
+  transform: rotate(180deg);
+}
